--- a/examples/browser.html
+++ b/examples/browser.html
@@ -35,6 +35,14 @@ const _makeControllerMesh = () => {
   mesh.frustumCulled = false;
   return mesh;
 };
+controllerMeshes = [
+  _makeControllerMesh(),
+  _makeControllerMesh(),
+];
+controllerMeshes.forEach(controllerMesh => {
+  scene.add(controllerMesh);
+});
+const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
 
 function init() {
   renderer = new THREE.WebGLRenderer({
@@ -199,14 +207,6 @@ function init() {
     scene.add(boxMeshes[i]);
   }
 
-  controllerMeshes = [
-    _makeControllerMesh(),
-    _makeControllerMesh(),
-  ];
-  for (let i = 0; i < controllerMeshes.length; i++) {
-    scene.add(controllerMeshes[i]);
-  }
-
   focused = true;
 
   window.addEventListener('mousemove', e => {
@@ -290,14 +290,21 @@ function animate(timestamp, frame) {
     }
   }
 
+  for (let i = 0; i < controllerMeshes.length; i++) {
+    controllerMeshes[i].visible = false;
+  }
+
   const inputSources = display.session.getInputSources();
   for (let i = 0; i < inputSources.length; i++) {
     const inputSource = inputSources[i];
     const pose = frame.getInputPose(inputSource);
-    const controllerMesh = controllerMeshes[i];
+
+    const controllerIndex = _getControllerIndex(inputSource);
+    const controllerMesh = controllerMeshes[controllerIndex];
     controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
     controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
     controllerMesh.updateMatrixWorld(true);
+    controllerMesh.visible = true;
 
     const leftLine = localLine;
     const topLine = localLine2;
@@ -340,13 +347,13 @@ function animate(timestamp, frame) {
         const x = (xFactor * planeWidth)/SCROLL_SCALE;
         const y = (yFactor * planeHeight)/SCROLL_SCALE;
 
-        controllerCoords[i][0] = x;
-        controllerCoords[i][1] = y;
+        controllerCoords[controllerIndex][0] = x;
+        controllerCoords[controllerIndex][1] = y;
 
         iframe.sendMouseMove(x, y);
 
-        boxMeshes[i].position.copy(intersectionPoint);
-        boxMeshes[i].updateMatrixWorld();
+        boxMeshes[controllerIndex].position.copy(intersectionPoint);
+        boxMeshes[controllerIndex].updateMatrixWorld();
       }
     }
   }
