--- a/examples/geometry_client.html
+++ b/examples/geometry_client.html
@@ -253,14 +253,20 @@ function animate(time, frame) {
     prevTime = time;
   }
 
+  for (let i = 0; i < controllerMeshes.length; i++) {
+    controllerMeshes[i].visible = false;
+  }
+
   const inputSources = (display && frame) ? display.session.getInputSources() : [];
   for (let i = 0; i < inputSources.length; i++) {
     const inputSource = inputSources[i];
     const pose = frame.getInputPose(inputSource);
 
-    const controllerMesh = controllerMeshes[i];
+    const controllerIndex = _getControllerIndex(inputSource);
+    const controllerMesh = controllerMeshes[controllerIndex];
     controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
     controllerMesh.updateMatrixWorld(true);
+    controllerMesh.visible = true;
   }
 
   if (paintMesh) {
