--- a/examples/graffiti_ml.html
+++ b/examples/graffiti_ml.html
@@ -355,17 +355,21 @@ const lastMenus = [false, false];
 const controllerHitTesting = [false, false];
 function animate(time, frame) {
   if (renderer.vr.enabled) {
-    const inputSources = display.session.getInputSources();
+    for (let i = 0; i < controllerMeshes.length; i++) {
+      controllerMeshes[i].visible = false;
+    }
 
+    const inputSources = display.session.getInputSources();
     for (let i = 0; i < inputSources.length; i++) {
       const inputSource = inputSources[i];
       const pose = frame.getInputPose(inputSource);
+      
       const controllerIndex = _getControllerIndex(inputSource);
-
       const controllerMesh = controllerMeshes[controllerIndex];
       controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
       controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
       // controllerMesh.updateMatrixWorld(true);
+      controllerMesh.visible = true;
 
       if (!controllerHitTesting[controllerIndex]) {
         const hitMesh = hitMeshes[controllerIndex];
