--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -35,6 +35,14 @@
       mesh.frustumCulled = false;
       return mesh;
     };
+    controllerMeshes = [
+      _makeControllerMesh(-0.1),
+      _makeControllerMesh(0.1),
+    ];
+    controllerMeshes.forEach(controllerMesh => {
+      scene.add(controllerMesh);
+    });
+    const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
 
     const numCubes = 100;
     const cubeSize = 0.2;
@@ -83,14 +91,6 @@
         mesh.frustumCulled = false;
         scene.add(mesh);
       })(); */
-
-      controllerMeshes = [
-        _makeControllerMesh(-0.1),
-        _makeControllerMesh(0.1),
-      ];
-      controllerMeshes.forEach(controllerMesh => {
-        scene.add(controllerMesh);
-      });
 
       renderer = new THREE.WebGLRenderer({
         antialias: true,
