--- a/examples/paint_ml.html
+++ b/examples/paint_ml.html
@@ -332,15 +332,20 @@ const lastGrabbeds = [false, false];
 const lastMenus = [false, false];
 function animate(time, frame) {
   if (renderer.vr.enabled) {
-    const inputSources = display.session.getInputSources();
+    for (let i = 0; i < controllerMeshes.length; i++) {
+      controllerMeshes[i].visible = false;
+    }
 
+    const inputSources = display.session.getInputSources();
     for (let i = 0; i < inputSources.length; i++) {
       const inputSource = inputSources[i];
       const pose = frame.getInputPose(inputSource);
 
+      const controllerIndex = _getControllerIndex(inputSource);
       const controllerMesh = controllerMeshes[i];
       controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
       controllerMesh.updateMatrixWorld(true);
+      controllerMesh.visible = true;
     }
 
     if (paintMesh) {
