Radar ml available controllers management

--- a/examples/radar_ml.html
+++ b/examples/radar_ml.html
@@ -69,6 +69,7 @@
     controllerMeshes.forEach(controllerMesh => {
       scene.add(controllerMesh);
     });
+    const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
 
     const _requestSpriteMesh = url => new Promise((accept, reject) => {
       const img = new Image();
@@ -201,16 +202,21 @@
 
     function animate(time, frame) {
       if (renderer.vr.enabled) {
-        const inputSources = display.session.getInputSources();
+        for (let i = 0; i < controllerMeshes.length; i++) {
+          controllerMeshes[i].visible = false;
+        }
 
+        const inputSources = display.session.getInputSources();
         for (let i = 0; i < inputSources.length; i++) {
           const inputSource = inputSources[i];
           const pose = frame.getInputPose(inputSource);
 
-          const controllerMesh = controllerMeshes[i];
+          const controllerIndex = _getControllerIndex(inputSource);
+          const controllerMesh = controllerMeshes[controllerIndex];
           controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
           controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
           controllerMesh.updateMatrixWorld(true);
+          controllerMesh.visible = true;
 
           const oldVrEnabled = renderer.vr.enabled;
           renderer.vr.enabled = false;
